src/np222kk/dv507/a2/test/cases/negative/test_while.ofp
void main() {
    while(1) {
        print("No int please!");
    }
}